--- a/index.html
+++ b/index.html
@@ -2,60 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Native JS filter</title>
 
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <main class="main">
     <h1 class="title">Фильтр по временам года на чистом JS</h1>
-    <ul class="filter">
-        <li class="filter__item filter__item--active">Все</li>
-        <li class="filter__item">Зима</li>
-        <li class="filter__item">Весна</li>
-        <li class="filter__item">Лето</li>
-        <li class="filter__item">Осень</li>
+    <ul class="list">
+        <li class="list__item list__item--active" data-id="all">Все</li>
+        <li class="list__item" data-id="winter">Зима</li>
+        <li class="list__item" data-id="spring">Весна</li>
+        <li class="list__item" data-id="summer">Лето</li>
+        <li class="list__item" data-id="autumn">Осень</li>
     </ul>
     <div class="cards">
         <div class="cards__item winter">
-            Зима
+            Зима 1
         </div>
         <div class="cards__item summer">
-            Лето
+            Лето 1
         </div>
         <div class="cards__item spring">
-            Весна
+            Весна 1
         </div>
         <div class="cards__item autumn">
-            Осень
+            Осень 1
         </div>
         <div class="cards__item autumn">
-            Осень
+            Осень 2
         </div>
         <div class="cards__item spring">
-            Весна
+            Весна 2
         </div>
         <div class="cards__item autumn">
-            Осень
+            Осень 3
         </div>
         <div class="cards__item summer">
-            Лето
+            Лето 2
         </div>
         <div class="cards__item spring">
-            Весна
+            Весна 3
         </div>
         <div class="cards__item spring">
-            Весна
+            Весна 4
         </div>
         <div class="cards__item winter">
-            Зима
+            Зима 2
         </div>
         <div class="cards__item summer">
-            Лето
+            Лето 3
         </div>
     </div>
 </main>
 
-<script src="index.js"></script>
+<script src="./index.js"></script>
 </body>
 </html>
